Bug 706834 - Crash in nsXULTreeAccessible::TreeViewChanged, r=marcoz

(aurora land)